Improved layout - index redirect to the appropriate language - added some contents to the home page

--- a/en/index.html
+++ b/en/index.html
@@ -1,5 +1,85 @@
 ---
 layout: frontpage
-lang: de
+lang: en
 ---
-<h1> Welcome ! </h1>
+<div class="page-header">
+  <h1>Introduction</h1>
+</div>
+<p>pyLoad is a fast, lightweight and full featured download manager for many One-Click-Hoster, container formats like DLC, video sites or just plain http/ftp links. It aims for low hardware requirements and platform independence to be runnable on all kind of systems (desktop pc, netbook, NAS, router).</p>
+<p>Despite its strict restriction it is packed full of features just like webinterface, captcha recognition, unrar and much more.</p>
+
+<div class="page-header">
+  <h1>Advantages</h1>
+</div>
+<p>Some main advantages at a glance:</p>
+<ul>
+  <li>completely written in python</li>
+  <li>low hardware requirements</li>
+  <li>features many One-Click-Hoster</li>
+  <li>including premium support, captcha recognition, reconnect feature</li>
+  <li>DLC, CCF, RSDF support</li>
+  <li>easily remote accessible via webinterface or GUI</li>
+  <li>free support at irc or forum</li>
+  <li>released under GPL</li>
+</ul>
+
+<p>Below you find an excerpt of pyLoads plugins and features. For more information and some tutorials take a look into the <a href="http://pyload.org/wiki">pyLoad Community Wiki</a>.</p>
+  
+<div class="page-header">
+  <h1>Hoster</h1>
+</div>
+<p>Here you find some currently supported hosters. All premium hosters includes freeuser support, of course. For a complete list look here.</p>
+  
+<h1><small>Premium</small></h1>
+<ul>
+  <li>Rapidshare.com</li>
+  <li>Netload.in</li>
+  <li>Uploaded.to</li>
+  <li>Shareonline.biz</li>
+  <li>Hotfile.com</li>
+  <li>Fileserv.com</li>
+  <li>Freakshare</li>
+  <li>DepositFiles</li>
+  <li>Megaupload</li>
+  <li>Filesonic</li>
+</ul>
+  
+<h1><small>Free only</small></h1>
+<ul>
+  <li>Zippyshare</li>
+  <li>files.mail.ru</li>
+  <li>yourfiles.to</li>
+  <li>uploading.com</li>
+  <li>4shared.com</li>
+  <li>Youtube</li>
+  <li>Myvideo</li>
+  <li>ShareCx</li>
+  <li>XDCC</li>
+</ul>
+  
+<div class="page-header">
+  <h1>Features</h1>
+</div>
+<ul class="thumbnails">
+  <li class="span4">
+    <div class="thumbnail">
+      <img data-src="holder.js/300x200" alt="">
+      <h3><a href="#">Webinterface</a></h3>
+      <p>Modern webinterface with nice AJAX support, written in django.</p>
+    </div>
+  </li>
+  <li class="span4">
+    <div class="thumbnail">
+      <img data-src="holder.js/300x200" alt="">
+      <h3>Android Client</h3>
+      <p>Let you control pyLoad from your smarthphone.</p>
+    </div>
+  </li>
+  <li class="span4">
+    <div class="thumbnail">
+      <img data-src="holder.js/300x200" alt="">
+      <h3>Captcha Recognition</h3>
+      <p>Automatically process catpchas for some hoster, when tesseract and pil is available or optional uses CaptchaTrader plugin.</p>
+    </div>
+  </li>
+</ul>
