--- a/downloads/index.html
+++ b/downloads/index.html
@@ -3,71 +3,81 @@ layout: default
 lang: en
 ---
 <div class="row-fluid">
-    <div class="span10 offset1" id="content">
-        <div class="row-fluid download">
-            <div class="span5 offset1">
-                <h1><img src="../static/img/downloads/windows.png">Windows</h1>
-                <p> The windows build has no dependencies and is portable. Just extract and start. </p>
-                <a href="#" class="btn btn-large btn-primary">Download pyload-05.exe</a>
-            </div>
-            <div class="span5 download">
-                <h1><img src="../static/img/downloads/ubuntu.png">Ubuntu / <img src="../static/img/downloads/debian.png">Debian
-                    
-                </h1>
-                <p>Just install via Packagemanager or with command-line:</p>
-                {% highlight bash %}
+    <div class="span8 offset2" id="content">
+        <h2>Core<small> plus Webinterface</small></h2>
+        <div class="well">
+            <div class="row-fluid">
+                <div class="span6">
+                    <h1><img src="../static/img/downloads/windows.png">Windows</h1>
+                    <p> The windows build has no dependencies and is portable. Just extract and start. </p>
+                    <a href="#" class="btn btn-large btn-primary">Download pyload-05.exe</a>
+                </div>
+                <div class="span6">
+                    <h1><img src="../static/img/downloads/ubuntu.png">Ubuntu / <img src="../static/img/downloads/debian.png">Debian
+                        
+                    </h1>
+                    <p>Just install via Packagemanager or with command-line:</p>
+                    {% highlight bash %}
 dpkg -i pyload-v0.4.9-all.deb
 {% endhighlight %}
-                <a href="#" class="btn btn-large btn-primary">Download pyload-05.deb</a>
+                    <a href="#" class="btn btn-large btn-primary">Download pyload-05.deb</a>
+                </div>
             </div>
-        </div>
-        <div class="row-fluid download">
-            <div class="span10 offset1 download">
-                <h1><img src="../static/img/downloads/arch.png">Archlinux</h1>
-                <p>There is a pyLoad package located at the AUR. We suggest installing using yaourt.</p>
-                {% highlight bash %}
+            <div class="row-fluid">
+                <div class="span10 download">
+                    <h1><img src="../static/img/downloads/arch.png">Archlinux</h1>
+                    <p>There is a pyLoad package located at the AUR. We suggest installing using yaourt.</p>
+                    {% highlight bash %}
 yaourt -S pyload
 {% endhighlight %}
+                </div>
             </div>
-        </div>
-        <div class="row-fluid download">
-            <div class="span10 offset1">
-                <h1>iPKG</h1>
-                <p>If you own a router or NAS with IPKG installed you can use this package. pyLoad will be installed under /opt, please make sure that this is your IPKG installation folder.</p>
-                {% highlight bash %}
+            <div class="row-fluid">
+                <div class="span10">
+                    <h1>iPKG</h1>
+                    <p>If you own a router or NAS with IPKG installed you can use this package. pyLoad will be installed under /opt, please make sure that this is your IPKG installation folder.</p>
+                    {% highlight bash %}
 ipkg install wget tesseract-ocr tesseract-ocr-lang-eng ossp-js unrar
 wget http://get.pyload.org/static/pyload-v0.4.9-noarch.ipk
 ipkg install pyload-v0.4.9-noarch.ipk
 pyLoadCore -s [For setup, dont copy this message in brackets!]
 {% endhighlight %}
+                </div>
             </div>
         </div>
-        <div class="row-fluid download">
-            <div class="span5 offset1">
-                <h1><img src="../static/img/downloads/android2.png">Android Client</h1>
-                <p>You can get the Android client from the market. </p>
-                <a href="#" class="btn btn-large btn-primary">enter Play Store</a>
-            </div>
-            <div class="span5">
-                <h1><img src="../static/img/downloads/ios.png">iOS Client</h1>
-                <p>You can get the “pyLoad Control” app from the iTunes store. </p>
-                <a href="#" class="btn btn-large btn-primary">enter iTunes Store</a>
+        <h2 style="padding-top:20px">Mobile Clients<small> control pyLoad with your Smartphone</small></h2>
+        <div class="well">
+            <div class="row-fluid">
+                <div class="span6">
+                    <h1><img src="../static/img/downloads/android2.png">Android Client</h1>
+                    <p>You can get the Android client from the market. </p>
+                    <a href="#" class="btn btn-large btn-primary">enter Play Store</a>
+                </div>
+                <div class="span6">
+                    <h1><img src="../static/img/downloads/ios.png">iOS Client</h1>
+                    <p>You can get the “pyLoad Control” app from the iTunes store. </p>
+                    <a href="#" class="btn btn-large btn-primary">enter iTunes Store</a>
+                </div>
             </div>
         </div>
-        <div class="row-fluid download">
-            <div class="span5 offset1">
-                <h1><img src="../static/img/downloads/source.png">Source Code</h1>
-                <p> The source code runs on every system with python and all dependencies installed, you can use it when there is no package for your OS. Before installing you should read some of the tutorials here.</p>
-                <a href="#" class="btn btn-large btn-primary">Download pyload-05-source.zip</a>
-            </div>
-            <div class="span5 download">
-                <h1><img src="../static/img/downloads/github.png">GitHub</h1>
-                <p>Sourcecode and issue tracker of pyLoad are located on GitHub.</br>
-                You can copy the git repository with:</p>
-                {% highlight bash %}
+        <h2 style="padding-top:20px">Source<small> install on other system or start develop</small></h2>
+        <div class="well">
+            <div class="row-fluid">
+                <div class="span6">
+                    <h1><img src="../static/img/downloads/source.png">Source Code</h1>
+                    <p> The source code runs on every system with python and all dependencies installed, you can use it when there is no package for your OS. Before installing you should read some of the tutorials here.</p>
+                    <a href="#" class="btn btn-large btn-primary">Download pyload-05-source.zip</a>
+                </div>
+                <div class="span6">
+                    <h1><img src="../static/img/downloads/github.png">GitHub</h1>
+                    <p>Sourcecode and issue tracker of pyLoad are located on GitHub.</br>
+                    You can copy the git repository with:</p>
+                    {% highlight bash %}
 $ git clone https://github.com/pyload/pyload.git
 {% endhighlight %}
+                </div>
             </div>
         </div>
+
     </div>
 </div>
