--- a/downloads/index.html
+++ b/downloads/index.html
@@ -1,88 +1,87 @@
 ---
 layout: default
+section: download
 lang: en
 ---
-<div class="row-fluid">
-    <div class="span10 offset1" id="content">
-        <div class="span8">
-            <h2>Core 0.5<small> plus Webinterface</small></h2>
-            <div class="well">
-                <div class="row-fluid">
-                    <div class="span12 download">
-                        <h1><img src="../static/img/downloads/windows.png">Windows</h1>
-                        <p> The windows build has no dependencies and is portable. Just extract and start. </p>
-                        <a href="#" class="btn btn-large btn-primary">Download</a>
-                    </div>
-                </div>
-                <div class="row-fluid">
-                    <div class="span12 download">
-                        <h1><img src="../static/img/downloads/ubuntu.png">Ubuntu / <img src="../static/img/downloads/debian.png">Debian
-                            
-                        </h1>
-                        <p>Just install via Packagemanager or with command-line:</p>
-                        {% highlight bash %}
-dpkg -i pyload-v0.4.9-all.deb
-{% endhighlight %}
-                        <a href="#" class="btn btn-large btn-primary">Download</a>
-                    </div>
-                </div>
-                <div class="row-fluid">
-                    <div class="span12">
-                        <h1><img src="../static/img/downloads/arch.png">Archlinux</h1>
-                        <p>There is a pyLoad package located at the AUR. We suggest installing using yaourt.</p>
-                        {% highlight bash %}
-yaourt -S pyload
-{% endhighlight %}
-                    </div>
-                </div>
-                <div class="row-fluid">
-                    <div class="span12">
-                        <h1>iPKG</h1>
-                        <p>If you own a router or NAS with IPKG installed you can use this package. pyLoad will be installed under /opt, please make sure that this is your IPKG installation folder.</p>
-                        {% highlight bash %}
-ipkg install wget tesseract-ocr tesseract-ocr-lang-eng ossp-js unrar
-wget http://get.pyload.org/static/pyload-v0.4.9-noarch.ipk
-ipkg install pyload-v0.4.9-noarch.ipk
-pyLoadCore -s [For setup, dont copy this message in brackets!]
-{% endhighlight %}
-                    </div>
-                </div>
-            </div>
+<div class="row-fluid" id="content">
+    <div class="span5 offset1">
+        <h2 class="section_header" style="margin-top: 0">
+            <hr class="left visible-desktop">
+            <span>Core</span>
+            <hr class="right visible-desktop">
+        </h2>
+
+        <div class="well">
+            <h1><img src="../static/img/downloads/windows.png">Windows</h1>
+
+            <p> The windows build has no dependencies and is portable. Just extract and start. </p>
+            <a href="#" class="btn btn-large btn-primary">Download</a>
         </div>
-        <div class="span4">
-            <h2>Clients</h2>
-            <div class="well">
-                <div class="row-fluid">
-                    <div class="span12 download">
-                        <h1><img src="../static/img/downloads/terminal.png">Terminal</h1>
-                        <p>Control pyLoad via Terminal</p>
-                        <a href="#" class="btn btn-large btn-primary">Download</a>
-                    </div>
-                </div>
-                <div class="row-fluid">
-                    <div class="span12 download">
-                        <h1><img src="../static/img/downloads/android2.png">Android Client</h1>
-                        <p>You can get the Android client from the market. </p>
-                        <a href="#" class="btn btn-large btn-primary">enter Play Store</a>
-                    </div>
-                </div>
-                <div class="row-fluid">
-                    <div class="span12">
-                        <h1><img src="../static/img/downloads/ios.png">iOS Client</h1>
-                        <p>You can get the “pyLoad Control” app from the iTunes store. </p>
-                        <a href="#" class="btn btn-large btn-primary">enter iTunes Store</a>
-                    </div>
-                </div>
-            </div>
-            <div class="well">
-                <div class="row-fluid">
-                    <div class="span12">
-                        <h1><img src="../static/img/downloads/source.png">Source Code</h1>
-                        <p> The source code runs on every system with python and all dependencies installed, you can use it when there is no package for your OS. Before installing you should read some of the tutorials here.</p>
-                        <a href="#" class="btn btn-large btn-primary">Download</a>
-                    </div>
-                </div>
-            </div>
+        <div class="well">
+            <h1><img src="../static/img/downloads/ubuntu.png">Ubuntu / <img src="../static/img/downloads/debian.png">Debian
+
+            </h1>
+
+            <p>Just install via Packagemanager or with command-line:</p>
+            {% highlight bash %}
+            dpkg -i pyload-v0.4.9-all.deb
+            {% endhighlight %}
+            <a href="#" class="btn btn-large btn-primary">Download</a>
+        </div>
+        <div class="well">
+            <h1><img src="../static/img/downloads/arch.png">Archlinux</h1>
+
+            <p>There is a pyLoad package located at the AUR. We suggest installing using yaourt.</p>
+            {% highlight bash %}
+            yaourt -S pyload
+            {% endhighlight %}
+        </div>
+        <div class="well">
+            <h1>iPKG</h1>
+
+            <p>If you own a router or NAS with IPKG installed you can use this package. pyLoad will be installed under
+                /opt, please make sure that this is your IPKG installation folder.</p>
+            {% highlight bash %}
+            ipkg install wget tesseract-ocr tesseract-ocr-lang-eng ossp-js unrar
+            wget http://get.pyload.org/static/pyload-v0.4.9-noarch.ipk
+            ipkg install pyload-v0.4.9-noarch.ipk
+            pyLoadCore -s [For setup, dont copy this message in brackets!]
+            {% endhighlight %}
+        </div>
+
+        <div class="well">
+            <h1><img src="../static/img/downloads/source.png">Source Code</h1>
+
+            <p> The source code runs on every system with python and all dependencies installed, you can use it when
+                there is no package for your OS. Before installing you should read some of the tutorials here.</p>
+            <a href="#" class="btn btn-large btn-primary">Download</a>
+        </div>
+    </div>
+
+    <div class="span5">
+        <h2 class="section_header" style="margin-top: 0">
+            <hr class="left visible-desktop">
+            <span>Clients</span>
+            <hr class="right visible-desktop">
+        </h2>
+
+        <div class="well">
+            <h1><img src="../static/img/downloads/terminal.png">Terminal</h1>
+
+            <p>Control pyLoad via Terminal</p>
+            <a href="#" class="btn btn-large btn-primary">Download</a>
+        </div>
+        <div class="well">
+            <h1><img src="../static/img/downloads/android2.png">Android Client</h1>
+
+            <p>You can get the Android client from the market. </p>
+            <a href="#" class="btn btn-large btn-primary">enter Play Store</a>
+        </div>
+        <div class="well">
+            <h1><img src="../static/img/downloads/ios.png">iOS Client</h1>
+
+            <p>You can get the “pyLoad Control” app from the iTunes store. </p>
+            <a href="#" class="btn btn-large btn-primary">enter iTunes Store</a>
         </div>
     </div>
 </div>
