configured asset pipeline

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -12,13 +12,13 @@ lang: en
         </h2>
 
         <div class="well">
-            <h1><img src="../static/img/downloads/windows.png">Windows</h1>
+            <h1><img src="{% asset_path img/downloads/windows.png %}">Windows</h1>
 
             <p> The windows build has no dependencies and is portable. Just extract and start. </p>
             <a href="#" class="btn btn-large btn-primary">Download</a>
         </div>
         <div class="well">
-            <h1><img src="../static/img/downloads/ubuntu.png">Ubuntu / <img src="../static/img/downloads/debian.png">Debian
+            <h1><img src="{% asset_path img/downloads/ubuntu.png %}">Ubuntu / <img src="{% asset_path img/downloads/debian.png %}">Debian
 
             </h1>
 
@@ -29,7 +29,7 @@ lang: en
             <a href="#" class="btn btn-large btn-primary">Download</a>
         </div>
         <div class="well">
-            <h1><img src="../static/img/downloads/arch.png">Archlinux</h1>
+            <h1><img src="{% asset_path img/downloads/arch.png %}">Archlinux</h1>
 
             <p>There is a pyLoad package located at the AUR. We suggest installing using yaourt.</p>
             {% highlight bash %}
@@ -50,7 +50,7 @@ lang: en
         </div>
 
         <div class="well">
-            <h1><img src="../static/img/downloads/source.png">Source Code</h1>
+            <h1><img src="{% asset_path img/downloads/source.png %}">Source Code</h1>
 
             <p> The source code runs on every system with python and all dependencies installed, you can use it when
                 there is no package for your OS. Before installing you should read some of the tutorials here.</p>
@@ -72,13 +72,13 @@ lang: en
             <a href="#" class="btn btn-large btn-primary">Download</a>
         </div>
         <div class="well">
-            <h1><img src="../static/img/downloads/android2.png">Android Client</h1>
+            <h1><img src="{% asset_path img/downloads/android2.png %}">Android Client</h1>
 
             <p>You can get the Android client from the market. </p>
             <a href="#" class="btn btn-large btn-primary">enter Play Store</a>
         </div>
         <div class="well">
-            <h1><img src="../static/img/downloads/ios.png">iOS Client</h1>
+            <h1><img src="{% asset_path img/downloads/ios.png %}">iOS Client</h1>
 
             <p>You can get the “pyLoad Control” app from the iTunes store. </p>
             <a href="#" class="btn btn-large btn-primary">enter iTunes Store</a>
