new workflow with grunt build script, use pyload-common repo

--- a/app/index.html
+++ b/app/index.html
@@ -74,7 +74,7 @@ lang: en
                                     </small>
                                 </ul>
                             </h3>
-                            <img src="{% asset_path img/screen.jpg %}" class="pull-left">
+                            <img src="/static/images/screen.jpg" class="pull-left">
                         </div>
                         <div class="item">
                             <h3>Captcha Recognition
@@ -94,7 +94,7 @@ lang: en
                                     <small>pyLoad needs very low resources of RAM and HDD</small>
                                 </ul>
                             </h3>
-                            <img src="{% asset_path img/screen2.jpg %}" class="pull-left">
+                            <img src="/static/images/screen2.jpg" class="pull-left">
                         </div>
                         <div class="item">
                             <h3>Easy to extend
@@ -113,7 +113,7 @@ lang: en
                                     <small>released under GPL license, all sources avaible at github</small>
                                 </ul>
                             </h3>
-                            <img src="{% asset_path img/screen3.jpg %}" class="pull-left">
+                            <img src="/static/images/screen3.jpg" class="pull-left">
                         </div>
                     </div>
                     <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
